# songbird

./: Cargo.toml
.github/workflows/: ci.yml
src/: config.rs  manager.rs  ws.rs
src/driver/: crypto.rs  mod.rs
src/driver/connection/: error.rs  mod.rs
src/driver/tasks/: error.rs  mixer.rs
src/driver/tasks/message/: mixer.rs
src/driver/tasks/mixer/: mod.rs
src/events/context/data/: disconnect.rs  voice.rs
src/input/: error.rs  mod.rs
src/tracks/: mod.rs
